--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="openDrawer">Open</string>
+    <string name="closeDrawer">close</string>
 
 
     <string-array name="query_suggestions">
@@ -18,7 +20,6 @@
         <item>Ruby</item>
         <item>JavaScript</item>
     </string-array>
-
 
 
 </resources>
