Drawer On All Screens with fragments (18 - sept - 2017)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,8 @@
 
     <string name="open_drawer">Drawer Open</string>
     <string name="close_drawer">Drawer Close</string>
-
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
 
 
 </resources>
